feat: rebalance wallet actions

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Status.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Status.cshtml
@@ -45,14 +45,7 @@ else
                     <partial name="Boltz/_Fees" model="FeesModel.Standalone"/>
                     <h5 class="mb-0">Wallet</h5>
                     <partial name="Boltz/_Stats" model="stats"/>
-                    <div class="btn-group gap-0">
-                        <a asp-action="WalletReceive" asp-route-walletId="@walletId" asp-route-storeId="@storeId" class="btn btn-secondary">Receive / Swap In</a>
-                        @if (!Model.StandaloneWallet.Readonly)
-                        {
-                            <a asp-action="WalletSend" asp-route-walletId="@walletId" asp-route-storeId="@storeId" class="btn btn-secondary @(balance?.Confirmed == 0 ? "disabled" : "")">Send / Swap Out</a>
-                            <a asp-action="WalletCredentials" asp-route-walletId="@walletId" asp-route-storeId="@storeId" class="btn btn-secondary">Show seed</a>
-                        }
-                    </div>
+                    <partial name="_WalletButtons" model="Model.StandaloneWallet"/>
                 </div>
             </div>
         }
@@ -63,8 +56,24 @@ else
             {
                 var ln = new AutoSwapStatus { SwapperType = SwapperType.Lightning, Status = Model.Status.Lightning };
                 var pendingLnSwaps = Model.PendingAutoSwaps?.Where(info => info.Type != SwapType.Chain).ToList();
+                var balance = Model.RebalanceWallet?.Balance;
+                if (balance is not null)
+                {
+                    ln.Stats =
+                    [
+                        new() { Name = "Wallet Balance", Value = balance.Total, Unit = Unit.Sat }
+                    ];
+                }
+
                 <div class="widget d-flex gap-3 flex-column">
-                    <partial name="Boltz/_AutoSwapStatus" model="ln"/>
+                    <div>
+                        <partial name="Boltz/_AutoSwapStatus" model="ln"/>
+                        @if (Model.RebalanceWallet is not null)
+                        {
+                            <partial name="_WalletButtons" model="Model.RebalanceWallet"/>
+                        }
+                    </div>
+
                     @if (Model.Recommendations is not null)
                     {
                         <div>
