--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
@@ -2,8 +2,8 @@
 @model BTCPayServer.Plugins.Boltz.Models.ChainSetup
 @{
     Layout = "_LayoutSetup";
-    ViewData["Title"] = "Setup Chain Swaps";
-    ViewData["Description"] = "When do you want to swap L-BTC back for mainchain BTC?";
+    ViewData["Title"] = "Set Up Chain Swaps";
+    ViewData["Description"] = "Automatically swap your L-BTC back to mainchain BTC.";
 
     var unitSats = "in sats";
 }
@@ -11,8 +11,15 @@
 <form method="post" class="mt-3">
 
     <div class="form-group absolute">
-        <label asp-for="MaxBalance" class="form-label">When my L-BTC balance reached (@unitSats)</label>
+        <label asp-for="MaxBalance" class="form-label">Max Balance (@unitSats)</label>
+        <small class="text-danger mx-1" data-bs-toggle="tooltip" data-bs-placement="top" title="If this balance is reached, a swap will be created"><vc:icon symbol="info"/></small>
         <input asp-for="MaxBalance" type="number" min="@(Model.PairInfo.Limits.Minimal + 10000)" class="form-control"/>
+    </div>
+
+    <div class="form-group absolute">
+        <label asp-for="ReserveBalance" class="form-label">Reserve Balance (@unitSats)</label>
+        <small class="text-danger mx-1" data-bs-toggle="tooltip" data-bs-placement="top" title="How much sats to leave in the wallet as a reserve"><vc:icon symbol="info"/></small>
+        <input asp-for="ReserveBalance" type="number" min="10000" class="form-control"/>
     </div>
 
     <div class="d-flex flex-row gap-2 justify-content-between">
