--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Configuration.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Configuration.cshtml
@@ -1,11 +1,13 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Boltzrpc
+@using BTCPayServer.Abstractions.TagHelpers
 @using BTCPayServer.Plugins.Boltz
 @using BTCPayServer.Plugins.Boltz.Models
+@using BTCPayServer.Plugins.Boltz.Views
 @using BTCPayServer.Security
 @model BTCPayServer.Plugins.Boltz.Models.BoltzConfig
 @{
-    ViewData.SetActivePage("Boltz", "Configuration", "Configuration");
+    ViewData.SetActivePage(BoltzNavPages.Configuration, "Configuration");
 
     var storeId = Context.GetImplicitStoreId();
     var mode = Model.Settings?.Mode;
@@ -21,7 +23,7 @@
         Model.Ln?.Wallet,
         nameof(ExistingWallet.CurrencyName)
     );
-    var swapTypes = new SelectListItem[] { new ("Reverse", "reverse"), new ("Normal", "normal") , new ("Both", "")   };
+    var swapTypes = new SelectListItem[] { new("Reverse", "reverse"), new("Normal", "normal"), new("Both", "") };
     var swapTypeList = new SelectList(swapTypes, nameof(SelectListItem.Value), nameof(SelectListItem.Text), Model.Ln?.SwapType);
 
     <form method="post" class="mt-3" id="autoswapForm">
@@ -144,7 +146,7 @@
 
             <div class="form-group">
                 <label asp-for="Chain.ReserveBalance" class="form-label">Reserve Balance (satoshis)</label>
-                <input type="number" asp-for="Chain.ReserveBalance" class="form-control" />
+                <input type="number" asp-for="Chain.ReserveBalance" class="form-control"/>
                 <span asp-validation-for="Chain.ReserveBalance" class="text-danger"></span>
             </div>
 
