--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/ImportWalletOptions.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/ImportWalletOptions.cshtml
@@ -11,7 +11,7 @@
 <div class="list-group mt-4">
     <a asp-controller="Boltz" asp-action="ImportWallet" asp-all-route-data="@Model.GetRouteData("importMethod", WalletImportMethod.Mnemonic)" class="list-group-item list-group-item-action @(!Model.AllowImportHot ? "disabled" : "")">
         <div class="image">
-            <vc:icon symbol="seed"/>
+            <vc:icon symbol="wallet-seed"/>
         </div>
         <div class="content">
             <h4>Enter wallet seed</h4>
@@ -32,7 +32,7 @@
     <div class="list-group mt-4">
         <a asp-controller="Boltz" asp-action="ImportWallet" asp-all-route-data="@Model.GetRouteData("importMethod", WalletImportMethod.Xpub)" class="list-group-item list-group-item-action">
             <div class="image">
-                <vc:icon symbol="xpub"/>
+                <vc:icon symbol="wallet-xpub"/>
             </div>
             <div class="content">
                 <h4>Enter extended public key</h4>
@@ -47,7 +47,7 @@
 <div class="list-group mt-4">
     <a asp-controller="Boltz" asp-action="ImportWallet" asp-all-route-data="@Model.GetRouteData("importMethod", WalletImportMethod.Descriptor)" class="list-group-item list-group-item-action">
         <div class="image">
-            <vc:icon symbol="xpub"/>
+            <vc:icon symbol="wallet-file"/>
         </div>
         <div class="content">
             <h4>Enter core descriptor</h4>
