--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupCurrency.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupCurrency.cshtml
@@ -11,14 +11,21 @@
 
 <div class="mt-4">
     <div class="list-group">
-        <a asp-controller="Boltz" asp-action="SetupWallet" asp-all-route-data="@Model.GetRouteData("currency", Currency.Lbtc)" class="list-group-item list-group-item-action">
+        <a asp-controller="Boltz" asp-action="SetupWallet"
+           asp-all-route-data="@Model.GetRouteData("currency", Currency.Lbtc)"
+           class="list-group-item list-group-item-action">
             <div class="image">
-                <vc:icon symbol="existing-wallet"/>
+                <img src="@Context.Request.GetRelativePathOrAbsolute("imlegacy/liquid.png")"
+                     style="height:3rem"/>
             </div>
             <div class="content d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between me-2">
                 <div>
                     <h4>Liquid</h4>
-                    <p class="mb-0 text-secondary">Select this option to rebalance using Liquid’s L-BTC and benefit from reliably cheap network fees and avoid rebalancing costs spiraling out of control when mainchain miner fees rise. The setup features creating a new Liquid wallet.</p>
+                    <p class="mb-0 text-secondary">
+                        Select this option to rebalance using Liquid’s L-BTC and benefit from
+                        reliably cheap network fees and avoid rebalancing costs spiraling out of control when mainchain
+                        miner fees rise. The setup features creating a new Liquid wallet.
+                    </p>
                 </div>
                 <small class="d-block text-primary mt-2 mt-lg-0">Popular</small>
             </div>
@@ -29,13 +36,19 @@
 
 <div class="mt-4">
     <div class="list-group">
-        <a asp-controller="Boltz" asp-action="SetupWallet" asp-all-route-data="@Model.GetRouteData("currency", Currency.Btc)" class="list-group-item list-group-item-action">
+        <a asp-controller="Boltz" asp-action="SetupWallet"
+           asp-all-route-data="@Model.GetRouteData("currency", Currency.Btc)"
+           class="list-group-item list-group-item-action">
             <div class="image">
-                <vc:icon symbol="new-wallet"/>
+                <img src="@Context.Request.GetRelativePathOrAbsolute("imlegacy/bitcoin.svg")"
+                     style="height:3rem"/>
             </div>
             <div class="content">
                 <h4>Mainchain</h4>
-                <p class="mb-0 text-secondary">Select this mode to rebalance using regular mainchain BTC. It is the most sovereign, but also the most expensive and most unreliable way to rebalance.</p>
+                <p class="mb-0 text-secondary">
+                    Select this mode to rebalance using regular mainchain BTC. It is the most
+                    sovereign, but also the most expensive and most unreliable way to rebalance.
+                </p>
             </div>
             <vc:icon symbol="caret-right"/>
         </a>
